jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1 # รัน Pod พร้อมกัน 1 ตัว
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      containers:
      - name: jenkins
        image: jenkins/jenkins:2.554-jdk21
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkinsdata
        resources: # กำหนดการใช้ Resource (วิศวกรที่ดีต้องใส่เสมอ)
          limits:
            cpu: "1000m"
            memory: "1024Mi"
          requests:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: jenkinsdata
        persistentVolumeClaim:
          claimName: jenkins-volume-claim # ต้องตรงกับชื่อ PVC ที่เราสร้างไว้ใน jenkins-pvc.yaml (PVC)
